--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ body{
 .btn-bg-color{
     background: 
     #E76F51;
-    border: none;
+   padding:10px 46px;
+    color: #fff;
 }
 .img-filter{
     filter: grayscale(100%);
@@ -27,6 +28,7 @@ body{
     background:#264653 ;
     color:#fff;
     border: 1px solid #E76F51;
+    
 }
 
 /* icon */
